--- a/templates/game-station.html
+++ b/templates/game-station.html
@@ -57,7 +57,7 @@
 
 						  <div class="aling-div">
 							<ul class="list-group">
-							  <li class="list-group-item"><a href="/list_gen_change" class="link_thumb">
+							  <li class="list-group-item"><a href="/list_gen_change_2" class="link_thumb">
 								<table class="table table-striped">
 									<tr>
 										<td><i class="fas fa-star fa-2x"></td>
