--- a/templates/list-read-change-dez-2.html
+++ b/templates/list-read-change-dez-2.html
@@ -33,7 +33,7 @@
                         <tr class="odd">
                           <td>-</td>
                           {% for cont in title_read %}
-                          <td>{{num[cont]}}</td>
+                          <td>{{read[cont][num]}}</td>
                           {% endfor %}
                         </tr>
                         {% endfor %}
@@ -52,60 +52,6 @@
         </div>
       </div>
     </section>
-
-    <section class="content">
-    <div class="container-fluid">
-      <div class="row" >
-        <div class="col-12">
-          <div id="example3_wrapper" class="card">
-              <ul class="list-group">
-                <form action="/fillgen_change_num" method="post" enctype="multipart/form-data">
-      
-                    <label for="dez1"><strong>Dezenas Principais</strong></label><br>
-                    <input type="text" name="dez1" value="{{dez1_read}}">
-                    <br><br>
-
-                    <div class="form-group">
-                      <div class="custom-control custom-switch">
-                        <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
-                        <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
-                      </div>
-                      <div class="custom-control custom-switch">
-                        <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega" checked>
-                        <label class="custom-control-label" for="customSwitch2">MegaSena</label>
-                      </div>
-                      <div class="custom-control custom-switch">
-                        <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
-                        <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
-                      </div>
-                    </div>
-
-                    <label for="coluna"><strong>Quantidade de Colunas </strong></label><br>
-                    <input type="text" name="coluna" value="{{qt_col}}">
-                    <br><br>
-                    <label for="dez2"><strong>Dezenas Extras </strong></label><br>
-                    <input type="text" name="dez2" value="{{dez2_read}}">
-                    <br><br>
-                    <label for="coluna-del"><strong>Deletar Colunas </strong></label><br>
-                    <select id="coluna-del" name="coluna-del">
-                      <option value="N">Não</option>
-                      <option value="S">Sim</option>
-                    </select>
-                    <br><br>
-                  
-                    <div>
-
-                      <div>
-                        <input type="submit" value="Gerar Jogos" id="alinha-button">
-                      </div>
-
-                </form>
-                <ul>
-            </div>
-          </div>
-        </div>
-      </div>
-   </section>
 
   <section>
     <div class="container-fluid">
