--- a/templates/list-read-change-dez.html
+++ b/templates/list-read-change-dez.html
@@ -67,16 +67,28 @@
 
                     <div class="form-group">
                       <div class="custom-control custom-switch">
-                        <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
-                        <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
+                        <input type="checkbox" class="custom-control-input" id="customSwitch1" name="lotom">
+                        <label class="custom-control-label" for="customSwitch1">Lotomania</label>
                       </div>
                       <div class="custom-control custom-switch">
-                        <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega" checked>
+                        <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
                         <label class="custom-control-label" for="customSwitch2">MegaSena</label>
                       </div>
                       <div class="custom-control custom-switch">
-                        <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch3" name="lotof">
                         <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch4" name="milho-dupla">
+                        <label class="custom-control-label" for="customSwitch4">Milhonária/DuplaSena</label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch5" name="quin-time">
+                        <label class="custom-control-label" for="customSwitch5">Quina/TimeMania</label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch6" name="dia">
+                        <label class="custom-control-label" for="customSwitch6">DiaDeSorte</label>
                       </div>
                     </div>
 
