--- a/templates/list-gen-change-2.html
+++ b/templates/list-gen-change-2.html
@@ -19,7 +19,7 @@
            
                   <form action="/fillgen_change_2" method="post" enctype="multipart/form-data">
                     <label for="dez"><strong>Dezenas Principais</strong></label><br>
-                    <input type="text" name="dez" value="{{dez_read}}">
+                    <input type="text" name="dez" value="{{dez_A}}">
                     <br><br>
                     
                       <div class="form-group">
