--- a/templates/list-read-change-dez.html
+++ b/templates/list-read-change-dez.html
@@ -62,7 +62,7 @@
                 <form action="/fillgen_change_num" method="post" enctype="multipart/form-data">
       
                     <label for="dez1"><strong>Dezenas Principais</strong></label><br>
-                    <input type="text" name="dez1" value="{{dez1_read}}">
+                    <input type="text" name="dez1" value="{{dez_A}}">
                     <br><br>
 
                     <div class="form-group">
