--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -18,7 +18,7 @@
                 <ul class="list-group">
                   <form action="/fillgen" method="post" enctype="multipart/form-data">
                     <label for="dez"><strong>Dezenas Principais</strong></label><br>
-                    <input type="text" name="dez" value="{{dez_read}}">
+                    <input type="text" name="dez" value="{{dez_A}}">
                     <br><br>
                    
                       <div class="form-group">
