--- a/templates/list-read-num-col.html
+++ b/templates/list-read-num-col.html
@@ -63,7 +63,7 @@
                 <form action="/fillgen_num" method="post" enctype="multipart/form-data">
       
                     <label for="dez"><strong>Dezenas Principais</strong></label><br>
-                    <input type="text" name="dez" value="{{dez_read}}">
+                    <input type="text" name="dez" value="{{dez_A}}">
                     <br><br>
 
                     <div class="form-group">
