--- a/templates/list-read-change-dez.html
+++ b/templates/list-read-change-dez.html
@@ -61,8 +61,8 @@
               <ul class="list-group">
                 <form action="/fillgen_change_num" method="post" enctype="multipart/form-data">
       
-                    <label for="dez1"><strong>Dezenas Principais</strong></label><br>
-                    <input type="text" name="dez1" value="{{dez_A}}">
+                    <label for="dez"><strong>Dezenas Principais</strong></label><br>
+                    <input type="text" name="dez" value="{{dez_A}}">
                     <br><br>
 
                     <div class="form-group">
