--- a/templates/game-station.html
+++ b/templates/game-station.html
@@ -42,7 +42,7 @@
 					  </div>
 
 
-					  <div class="aling-div">
+					  <!-- <div class="aling-div">
 						<ul class="list-group">
 						  <li class="list-group-item"><a href="/list_gen_change" class="link_thumb">
 							<table class="table table-striped">
@@ -53,7 +53,7 @@
 							  </table>
 						  </a></li>
 						  </ul>
-						  </div>
+						  </div> -->
 
 						  <div class="aling-div">
 							<ul class="list-group">
@@ -61,7 +61,7 @@
 								<table class="table table-striped">
 									<tr>
 										<td><i class="fas fa-star fa-2x"></td>
-										<td style="text-align: right;"><strong>Gerar jogos automáticos_2</i></strong> 
+										<td style="text-align: right;"><strong>Gerar jogos automáticos</i></strong> 
 									</tr>
 								  </table>
 							  </a></li>
