--- a/templates/list-read-change-dez.html
+++ b/templates/list-read-change-dez.html
@@ -90,7 +90,7 @@
                         <label class="custom-control-label" for="customSwitch6"><span data-tooltip="31 Dezenas">DiaDeSorte</span></label>
                       </div>
                     </div>
-                    
+                  
                     <label for="coluna"><strong>Quantidade de Colunas </strong></label><br>
                     <input type="text" name="coluna" value="{{qt_col}}">
                     <br><br>
@@ -103,7 +103,10 @@
                       <option value="S">Sim</option>
                     </select>
                     <br><br>
-                  
+                    <label for="del"><strong>QT Colunas a Deletar</strong></label><br>
+                    <input type="text" name="del">
+                    <br><br>
+
                     <div>
 
                       <div>
