--- a/templates/list-read-num-col.html
+++ b/templates/list-read-num-col.html
@@ -102,6 +102,9 @@
                       <option value="S">Sim</option>
                     </select>
                     <br><br>
+                    <label for="del"><strong>QT Colunas a Deletar</strong></label><br>
+                    <input type="text" name="del">
+                    <br><br>
                   
                     <div>
 
