--- a/templates/list-gen-change.html
+++ b/templates/list-gen-change.html
@@ -21,50 +21,40 @@
                     <input type="text" name="dez" value="{{dez_A}}">
                     <br><br>
                     
-                      <div class="form-group">
-                        <div class="custom-control custom-switch">
-                          <input type="checkbox" class="custom-control-input" id="customSwitch1" name="lotom">
-                          <label class="custom-control-label" for="customSwitch1">Lotomania</label>
-                        </div>
-                        <div class="custom-control custom-switch">
-                          <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
-                          <label class="custom-control-label" for="customSwitch2">MegaSena</label>
-                        </div>
-                 
-                        <div class="form-group">
-                          <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="customSwitch1" name="lotom">
-                            <label class="custom-control-label" for="customSwitch1"><span data-tooltip="100 Dezenas">Lotomania</span></label>
-                          </div>
-                          <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
-                            <label class="custom-control-label" for="customSwitch2"><span data-tooltip="60 Dezenas">MegaSen</span></label>
-                          </div>
-                          <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="customSwitch3" name="lotof">
-                            <label class="custom-control-label" for="customSwitch3"><span data-tooltip="25 Dezenas">LotoFácil</span></label>
-                          </div>
-                          <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="customSwitch4" name="milho-dupla">
-                            <label class="custom-control-label" for="customSwitch4"><span data-tooltip="50 Dezenas">Milhonária/DuplaSena</span></label>
-                          </div>
-                          <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="customSwitch5" name="quin-time">
-                            <label class="custom-control-label" for="customSwitch5"><span data-tooltip="80 Dezenas">Quina/TimeMania</span></label>
-                          </div>
-                          <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="customSwitch6" name="dia">
-                            <label class="custom-control-label" for="customSwitch6"><span data-tooltip="31 Dezenas">DiaDeSorte</span></label>
-                          </div>
-                        </div>
-                        
-                      <label for="linha"><strong>Quantidade de Linhas </strong></label><br>
-                      <input type="text" name="numero-linha">
-                      <br><br>
-                      <label for="dez2"><strong>Dezenas Extras </strong></label><br>
-                      <input type="text" name="dez2">
-                      <br><br>
-                      <div>
+                    <div class="form-group">
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch1" name="lotom">
+                        <label class="custom-control-label" for="customSwitch1"><span data-tooltip="100 Dezenas">Lotomania</span></label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
+                        <label class="custom-control-label" for="customSwitch2"><span data-tooltip="60 Dezenas">MegaSen</span></label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch3" name="lotof">
+                        <label class="custom-control-label" for="customSwitch3"><span data-tooltip="25 Dezenas">LotoFácil</span></label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch4" name="milho-dupla">
+                        <label class="custom-control-label" for="customSwitch4"><span data-tooltip="50 Dezenas">Milhonária/DuplaSena</span></label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch5" name="quin-time">
+                        <label class="custom-control-label" for="customSwitch5"><span data-tooltip="80 Dezenas">Quina/TimeMania</span></label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch6" name="dia">
+                        <label class="custom-control-label" for="customSwitch6"><span data-tooltip="31 Dezenas">DiaDeSorte</span></label>
+                      </div>
+                    </div>
+                    
+                    <label for="linha"><strong>Quantidade de Linhas </strong></label><br>
+                    <input type="text" name="numero-linha">
+                    <br><br>
+                    <label for="dez-extra"><strong>Dezenas Extras </strong></label><br>
+                    <input type="text" name="dez-extra">
+                    <br><br>
+                    <div>
                       <input type="submit" value="Gerar Jogos" id="alinha-button">
                     </div>
                   </form>
