--- a/templates/list-read-change-dez.html
+++ b/templates/list-read-change-dez.html
@@ -24,7 +24,7 @@
                         <tr role="row">
                           <th class="sorting sorting_asc"></th>
                           {% for cont in title_read %}
-                          <th class="sorting">COL_{{cont + 1}}</th>
+                          <th class="sorting">COL_{{cont}}</th>
                           {% endfor %}
                         </tr>
                       </thead>
