--- a/templates/list-gen-change-2.html
+++ b/templates/list-gen-change-2.html
@@ -20,6 +20,8 @@
                     <label for="dez"><strong>Dezenas Principais</strong></label><br>
                     <input type="text" name="dez" value="{{dez_A}}">
                     <br><br>
+
+                    <div id="read_check">{{readCheck}}</div>
                     
                     <div class="form-group">
                       <div class="custom-control custom-switch">
