--- a/templates/list-read-change-dez.html
+++ b/templates/list-read-change-dez.html
@@ -64,6 +64,9 @@
                     <label for="dez"><strong>Dezenas Principais</strong></label><br>
                     <input type="text" name="dez" value="{{dez_A}}">
                     <br><br>
+
+                    <div id="read_check">{{readCheck}}</div>
+                    
                     <div class="form-group">
                       <div class="custom-control custom-switch">
                         <input type="checkbox" class="custom-control-input" id="customSwitch1" name="lotom">
@@ -103,10 +106,9 @@
                       <option value="S">Sim</option>
                     </select>
                     <br><br>
-                    <label for="del"><strong>QT Colunas a Deletar</strong></label><br>
+                    <label for="del"><strong>Colunas a Deletar</strong></label><br>
                     <input type="text" name="del">
                     <br><br>
-
                     <div>
 
                       <div>
